cmake_minimum_required(VERSION 3.20)

project(OOP)

set(CMAKE_CXX_STANDARD 14)

add_executable(${PROJECT_NAME} main.cpp Homework1/Power.cpp Homework1/Power.h Homework1/RGBA.cpp Homework1/RGBA.h Homework1/Stack.cpp Homework1/Stack.h Homework2/Task1/Person.cpp Homework2/Task1/Person.h Homework2/Task1/Student.cpp Homework2/Task1/Student.h Homework2/Task2/Apple.cpp Homework2/Task2/Apple.h Homework2/Task2/Banana.cpp Homework2/Task2/Banana.h Homework2/Task2/Fruit.cpp Homework2/Task2/Fruit.h Homework2/Task2/GrannySmith.cpp Homework2/Task2/GrannySmith.h BlackJack/Card.cpp BlackJack/Card.h)